# django-webpack

./: .gitignore  package-lock.json  package.json  pyproject.toml  webpack.config.js
apps/home/: urls.py  views.py
apps/home/templates/: base.html  home.html
project/: settings.py  urls.py
