[tool.poetry]
name = "setupwebpack"
version = "0.1.0"
description = ""
authors = ["mikael <mbriolet.ma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"
autopep8 = "^1.4"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pydocstyle = "^3.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
